// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RUN-SCRIPT command can do it following the dependency tree 1`] = `
Array [
  Array [
    "yarn run start",
    Object {
      "bareLogs": undefined,
      "cwd": "test/fixtures/packages3/oao-b",
      "storySrc": "oao-b",
    },
  ],
  Array [
    "yarn run start",
    Object {
      "bareLogs": undefined,
      "cwd": "test/fixtures/packages3/oao",
      "storySrc": "oao",
    },
  ],
  Array [
    "yarn run start",
    Object {
      "bareLogs": undefined,
      "cwd": "test/fixtures/packages3/oao-c",
      "storySrc": "oao-c",
    },
  ],
  Array [
    "yarn run start",
    Object {
      "bareLogs": undefined,
      "cwd": "test/fixtures/packages3/oao-d",
      "storySrc": "oao-d",
    },
  ],
  Array [
    "yarn run start",
    Object {
      "bareLogs": undefined,
      "cwd": "test/fixtures/packages3/oao-priv",
      "storySrc": "oao-priv",
    },
  ],
]
`;

exports[`RUN-SCRIPT command executes the specified script on all sub-packages 1`] = `
Array [
  Array [
    "yarn run start",
    Object {
      "bareLogs": undefined,
      "cwd": "test/fixtures/packages/oao-b",
      "storySrc": "oao-b",
    },
  ],
  Array [
    "yarn run start",
    Object {
      "bareLogs": undefined,
      "cwd": "test/fixtures/packages/oao-c",
      "storySrc": "oao-c",
    },
  ],
]
`;
